# EduManage

./: .gitignore  CMakeLists.txt  README.md  api_main.cpp  main.cpp  run_project.bat
api/: ApiServer.cpp  ApiServer.h  AuthRoutes.h  CorsMiddleware.h  CourseRoutes.h  GroupRoutes.h  JsonHelpers.h  ProgressRoutes.h  TeacherRoutes.h  TestRoutes.h  ThemeRoutes.h  UserRoutes.h
common/: ModelLimits.h  TextUtils.h  Validator.h
frontend/: dashboard.html  index.html
frontend/css/: main.css
frontend/js/: api.js  app.js  dashboard-core.js  dashboard-courses.js  dashboard-init.js  dashboard-modals-create.js  dashboard-modals-util.js  dashboard-modals-view.js  dashboard-schedule.js  dashboard-sections.js  dashboard.js
models/: AuthDto.h  Course.h  CourseDto.h  Group.h  HomeworkSubmission.h  Lesson.h  Question.h  Student.h  Teacher.h  Test.h  TestResult.h  Theme.h  User.h  UserDto.h
services/: AuthService.cpp  AuthService.h  CourseService.cpp  CourseService.h
storage/: BinaryStorage.h  CourseStorage.h  GroupStorage.h  HomeworkStorage.h  LessonStorage.h  QuestionStorage.h  StudentStorage.cpp  StudentStorage.h  TeacherStorage.cpp  TeacherStorage.h  TestResultStorage.h  TestStorage.h  ThemeStorage.h  UserStorage.cpp  UserStorage.h
tests/: test_auth.cpp  test_course.cpp
ui/: ConsoleApp.cpp  ConsoleApp.h
